--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,34 @@
     <link href="https://fonts.googleapis.com/css?family=Exo&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <title>Permian</title>
+    <meta name="title" content="Permian" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Permian is a user-friendly service finding site where service providers or contractors can post the service they provide, add a price sheet of the service, and can be contacted by others through SMS text message."
     />
-    <link rel="apple-touch-icon" href="logo192.png" />
+    <meta name="image" property="og:image" content="./PermianLandingPage.png" />
+    <meta name="author" content="Noel Contreras" />
+​
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Permian" />
+    <meta
+      property="og:description"
+      content="Permian is a user-friendly service finding site where service providers or contractors can post the service they provide, add a price sheet of the service, and can be contacted by others through SMS text message."
+    />
+    <meta property="og:image" content="./PermianLandingPage.png" />
+​
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:title" content="Permian" />
+    <meta
+      property="twitter:description"
+      content="Permian is a user-friendly service finding site where service providers or contractors can post the service they provide, add a price sheet of the service, and can be contacted by others through SMS text message."
+    />
+    <meta property="twitter:image" content="./PermianLandingPage.png" />
+
+Collapse
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -25,7 +48,6 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Permian</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
